# codemonkey

./: .gitignore  CONTRIBUTING.md  README.md  accountManager.py  accounts.pickle  accounts.txt  addUser.py  app.py  challenges.yaml  completion.py  completions.pickle  courseCompletion.pickle  courseCompletion.py  customThread.py  editUser.py  email.py  main.py  personalFunctions.py  pickleLoader.py  pyproject.toml  replit.nix  requirements.txt  reset.sh  run.bat  sendEmail.py  sessions.py  survey.py  verifications.py  yml.py
programRuns/: 2fHF98rWPTYXf3nA6xt7.py  C2Zqsj7yCLZrmSJGSGdR.py  filler  iT1lVH7DmpbsMgebisB8.py  z5chYolz9ln1tW7QD3Bm.py
static/codemirror-5.65.11/lib/: codemirror.css
static/css/: 404.css  about.css  admin.css  challenge.css  codemirror.css  common.css  login.css  main.css  style.css  survey.css
static/js/: challenges.js  skulpt.js
templates/: 404.html  about.html  admin.html  adminStatus.html  challenge.html  challengeTemplate.html  footer.html  header.html  index.html  login.html  presurvey.html  redirect.html  register.html  results.html  test.html
